--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,40 @@
+.navbar{
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.rrss-img:hover{
+  transform: scale(1.05);
+  transition: .2s linear;
+}
+
+.footer{
+  background-color: rgba(0, 0, 0, .6);
+}
+
+.c-link{
+  transition: .2s linear;
+  padding: 5px 10px;
+}
+
+.carousel-inner{
+  height: 60vh;
+}
+
+.c-img{
+  object-fit: cover;
+}
+
+.select{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.cards{
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.detail-p{
+  margin: auto 0;
+}
 
