--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .navbar{
   background-color: rgba(0, 0, 0, .5);
 }
 
 .footer{
   background-color: rgba(0, 0, 0, .6);
+}
+
+body{
+  background-color: rgba(230, 230, 230, 1);
 }
 
 .rrss-img:hover{
@@ -39,5 +45,27 @@
 }
 
 /*  upcoming events  */
+/*  past events  */
+/*  contact  */
+
+.contact__form{
+  max-width: 600px;
+  margin: 50px auto;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.contact-h2{
+  padding: 50px 0px 10px;
+  font-family: "Indie Flower", cursive;
+  font-weight: 600;
+  color: #005;
+}
+
+.btn{
+  
+}
+
+/*  stats  */
 
 
