--- a/style/style.css
+++ b/style/style.css
@@ -40,8 +40,21 @@ body{
   margin: 0 auto;
 }
 
+.card{
+  width: 18rem;
+  height: 25rem;
+}
+
 .detail-p{
   margin: auto 0;
+}
+
+.card-text{
+  text-align: justify;
+}
+
+.price-a{
+  
 }
 
 /*  upcoming events  */
@@ -87,11 +100,28 @@ td{
 /*  details  */
 
 .details-div{
-  width: 600px;
-  height: 400px;
-  border: 2px solid blueviolet;
+  max-width: 1000px;
+  border: 2px solid white;
   border-radius: 5px;
-
   margin-top: 50px;
   gap: 5px;
+}
+
+.details-img img{
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px gray;
+}
+
+.details-data span{
+  font-weight: bold;
+}
+
+.details-data li{
+  list-style: circle;
+}
+
+.details-data p{
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
 }
