--- a/style/style.css
+++ b/style/style.css
@@ -82,6 +82,14 @@ body{
   color: #005;
 }
 
+.form-search{
+  width: 35px;
+  height: 35px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: none;
+}
+
 /*  stats  */
 
 .stats-h2{
