--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
   background-color: rgba(0, 0, 0, .5);
 }
 
-.body{
+body{
   background-color: rgba(230, 230, 230, 1);
 }
 
@@ -50,6 +50,9 @@
   width: 18rem;
   height: 25rem;
   box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card img{
@@ -75,7 +78,7 @@
   font-family: "Gruppo", sans-serif;
 }
 
-.form-control{
+.search-field{
   width: 200px;
 }
 
@@ -127,17 +130,24 @@ td{
   border-radius: 5px;
   margin-top: 50px;
   gap: 5px;
+  padding: 10px;
+}
+
+.card-details{
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .details-img{
-  width: 60%;
-  height: 50vh;
+  max-width: 60%;
 }
 
 .details-img img{
   border-radius: 10px;
   box-shadow: 0px 0px 20px gray;
-  min-width: 15rem;
+
+  min-width: 300px;
+  max-height: 300px;
 }
 
 .details-data{
@@ -145,7 +155,7 @@ td{
   border-radius: 10px;
   width: 40%;
   min-width: 15rem;
-  height: 48vh;
+  max-height: 48vh;
 }
 
 .details-data span{
